Second Commit - Typing Animation is Glitchy

--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
-
-	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
-
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
@@ -62,7 +59,22 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 						<h1 class="mb-4 mt-3">I'm <span>Koushik Sridhar</span></h1>
-			            <h2 class="mb-4"> A Problem Solver </h2>
+						<h2 class="mb-4 typing">  </h2>
+						
+						<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+						<script type="text/javascript">
+							var type = new Typed(".typing", {
+								strings: [
+									"A Problem Solver",
+									"Hello World"
+									
+								],
+								typeSpeed: 50,
+								backSpeed: 50,
+								loop: true
+							});
+						</script>
+
 			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
