test vscode commit

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<script type="text/javascript">
 							var type = new Typed(".typing", {
 								strings: [
-									"A Problem Solver",
+									"A Problem hero",
 									"Hello World"
 									
 								],
