test commit vscode

--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
 						<script type="text/javascript">
 							var type = new Typed(".typing", {
 								strings: [
-									"A Problem hero",
-									"Hello World"
-									
+									"Problem-Solver",
+									"Computer Scientist",
+									"Data Scientist",
+									"Researcher"
 								],
 								typeSpeed: 50,
 								backSpeed: 50,
