fixed resume + experience

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<h2 class="mb-4"> <span id="typed"></span></h2>
 						<h5>I am actively seeking internship opportunities for <strong>Summer 2020</strong>. Please reach out to me if interested!</h5>
 						
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <p><a href="#" class="btn btn-primary py-3 px-4">Contact Me</a> <a href="files/resume.pdf" class="btn btn-white btn-outline-white py-3 px-4">Resumé</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -200,57 +200,47 @@
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Resume</h1>
-            <h2 class="mb-4">Resume</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+          	<h1 class="big big-2">Expereince</h1>
+            <h2 class="mb-4">Experience</h2>
           </div>
         </div>
     		<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Master Degree of Design</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+						<span class="date">Founder/CEO + Researcher</span>
+    					<h2>AzureWorks</h2>
+    					<span class="position">August 2018 - Present</span>
+    					<p class="mt-4">Created and am currently leading student-led organization that develops medical technologies for the elderly using Android/iOS Development. Also serve as an author for the blog aspect, spreading information about recent tech + medical innovations.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Bachelor's Degree of C.A</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Diploma in Computer</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+						<span class="date">Researcher</span>
+    					<h2>Translational Vision Lab | Northeastern University + MIT (Research Science Institute) </h2>
+    					<span class="position">June 2019 - August 2019</span>
+    					<p class="mt-4">Worked with Dr. Anna Kosovicheva and Dr. Peter Bex on a computational method to analyze localization
+							errors in the visual field of humans. This was the first work of its kind. Abstract accepted by the Vision Sciences Society (2020) can be found <a href="">here</a>.</p>
     				</div>
     			</div>
 
     			<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">Parkinson's Initiative Lead</span>
+    					<h2>Parkinson's Association of the Carolinas</h2>
+    					<span class="position">August 2016 - Present</span>
+    					<p class="mt-4">Developed and organized the ”Parkinson’s Talk Initiative” to increase awareness for Parkinson's Disease. Raised
+							$1,500 due to the initiative.</p>
+					</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Art &amp; Creative Director</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2015</span>
-    					<h2>Wordpress Developer</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-    				</div>
-    				<div class="resume-wrap ftco-animate">
-    					<span class="date">2017-2018</span>
-    					<h2>UI/UX Designer</h2>
-    					<span class="position">Cambridge University</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<span class="date">Sung Lab</span>
+    					<h2>Student Researcher</h2>
+    					<span class="position">June 2018 - August 2018</span>
+    					<p class="mt-4">Worked with Dr. Way Sung to develop a computational framework to identify CRISPR sites for genetic
+							engineering. Performed CRISPR analysis to validate results of the computational method. </p>
     				</div>
     			</div>
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="files/resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -333,9 +323,8 @@
     	<div class="container">
     		<div class="row justify-content-center py-5 mt-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Services</h1>
-            <h2 class="mb-4">Services</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+          	<h1 class="big big-2">Awards</h1>
+            <h2 class="mb-4">Awards</h2>
           </div>
         </div>
     		<div class="row">
@@ -515,7 +504,7 @@
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm <span>Available</span> for freelancing</h2>
 						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
+						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Contact Me</a></p>
 					</div>
 				</div>
 			</div>
@@ -669,7 +658,7 @@
 <!--========Typing Animation on Enter STARTS===========-->
   <script>
 	var typed = new Typed('#typed', {
-						  strings:["Problem-Solver","Computer Scientist","Avid Learner", "Full Stack Developer"],
+						  strings:["Problem-Solver","Computer Scientist","Avid Learner", "Full Stack Developer", "Researcher", "Visionary"],
 						  loop:true,
 						  typeSpeed:40,
 						  backSpeed:20,
